<resources>

    <string name="app_name">TechRadar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Technology Radar</string>
    <string name="about_us">About us</string>
    <string name="current_radar">Current Radar</string>
    <string name="references">References</string>
    <string name="user_guide">User guide</string>
    <string name="about_radar">About Radar</string>
    <string name="title_activity_about_radar">About Radar</string>
    <string name="title_activity_current_radar">CurrentRadar</string>

</resources>